--- a/RndTech.DevRel.App/ClientApp/public/index.html
+++ b/RndTech.DevRel.App/ClientApp/public/index.html
@@ -5,26 +5,42 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 	<meta name="theme-color" content="#000000">
 	<title>Исследование узнаваемости и привлекательности IT-компаний Ростовской области</title>
+	<!-- Put this script tag to the <head> of your page -->
+	<script type="text/javascript" src="https://vk.com/js/api/share.js?95" charset="windows-1251"></script>
 	<!-- Yandex.Metrika counter -->
-    <script type="text/javascript">
-      (function(m,e,t,r,i,k,a){m[i]=m[i]||function(){(m[i].a=m[i].a||[]).push(arguments)};
-      m[i].l=1*new Date();k=e.createElement(t),a=e.getElementsByTagName(t)[0],k.async=1,k.src=r,a.parentNode.insertBefore(k,a)})
-      (window, document, "script", "https://mc.yandex.ru/metrika/tag.js", "ym");
+	<script type="text/javascript">
+		(function (m, e, t, r, i, k, a) {
+		m[i] = m[i] || function () { (m[i].a = m[i].a || []).push(arguments) };
+			m[i].l = 1 * new Date(); k = e.createElement(t), a = e.getElementsByTagName(t)[0], k.async = 1, k.src = r, a.parentNode.insertBefore(k, a)
+		})
+			(window, document, "script", "https://mc.yandex.ru/metrika/tag.js", "ym");
 
-      ym(56672752, "init", {
-           clickmap:true,
-           trackLinks:true,
-           accurateTrackBounce:true,
-           webvisor:true
-   });
-    </script>
-    <noscript><div><img src="https://mc.yandex.ru/watch/56672752" style="position:absolute; left:-9999px;" alt="" /></div></noscript>
-    <!-- /Yandex.Metrika counter -->
+		ym(56672752, "init", {
+			clickmap: true,
+			trackLinks: true,
+			accurateTrackBounce: true,
+			webvisor: true
+		});
+	</script>
+	<noscript><div><img src="https://mc.yandex.ru/watch/56672752" style="position:absolute; left:-9999px;" alt="" /></div></noscript>
+	<!-- /Yandex.Metrika counter -->
 </head>
   <body>
     <noscript>
       You need to enable JavaScript to run this app.
     </noscript>
     <div id="root"></div>
+	<div style="background: #ccc; display: flex; flex-direction: row; flex-wrap: nowrap; width: 100%;">
+		<div style="margin: 10px;">Сделано второпях и с любовью RndTech</div>
+		<div style="margin: 10px;"><a href='https://t.me/rndtechevents'>Телеграм-канал всех событий</a></div>
+		<div style="margin: 10px;"><a href='https://vk.com/rndtech'>Группа IT-сообщества в ВК</a></div>
+		<div style="margin: 10px;">
+			<!-- Put this script tag to the place, where the Share button will be -->
+			<script type="text/javascript">
+<!--
+				document.write(VK.Share.button(false, { type: "round", text: "Рассказать всем" }));
+				--></script>
+		</div>
+	</div>
   </body>
 </html>
