Добавил в футер ссылку с донатами

--- a/RndTech.DevRel.App/ClientApp/public/index.html
+++ b/RndTech.DevRel.App/ClientApp/public/index.html
@@ -41,6 +41,7 @@
 				document.write(VK.Share.button(false, { type: "round", text: "Рассказать всем" }));
 				--></script>
 		</div>
+		<div style="margin: 10px;"><a style="color: orangered" href='http://rndtech.pro/donate/'>Задонатить на митапы</a></div>
 	</div>
   </body>
 </html>
