Добавлен счётчик VK чтобы прошедшим опрос не отображалась реклама

--- a/RndTech.DevRel.App/ClientApp/public/2020.html
+++ b/RndTech.DevRel.App/ClientApp/public/2020.html
@@ -129,6 +129,9 @@
     </script>
     <noscript><div><img src="https://mc.yandex.ru/watch/56672752" style="position:absolute; left:-9999px;" alt="" /></div></noscript>
     <!-- /Yandex.Metrika counter -->
+
+    <script type="text/javascript">!function(){var t=document.createElement("script");t.type="text/javascript",t.async=!0,t.src="https://vk.com/js/api/openapi.js?168",t.onload=function(){VK.Retargeting.Init("VK-RTRG-542549-5NkBx"),VK.Retargeting.Hit()},document.head.appendChild(t)}();</script><noscript><img src="https://vk.com/rtrg?p=VK-RTRG-542549-5NkBx" style="position:fixed; left:-999px;" alt=""/></noscript>
+    
 </head>
 <body>
     <div id="surveyContainer"></div>
